✨ tetsing the creation of h1 Element in AppComponent instance

--- a/DAY2/pokedex/src/app/app.component.html
+++ b/DAY2/pokedex/src/app/app.component.html
@@ -1,3 +1,6 @@
+<header>
+  <h1 class="header">Pokedex App</h1>
+</header>
 <!--Pokemon Listing-->
 <router-outlet></router-outlet>
 
@@ -6,6 +9,6 @@
 
 <!--Loader-->
 <div class="overlayLoader" *ngIf="isLoading | async">
-    <img alt="pokemonLoader" src="../../../assets/images/loader.gif" />
+  <img alt="pokemonLoader" src="../../../assets/images/loader.gif" />
 </div>
 <!--/#Loader-->
