✨ using detectChanges() - for interpolation

--- a/DAY2/pokedex/src/app/app.component.html
+++ b/DAY2/pokedex/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="header">Pokedex App</h1>
+  <h1 class="header">{{ title }}</h1>
 </header>
 <!--Pokemon Listing-->
 <router-outlet></router-outlet>
